# demo-dvc-poetry

./: pyproject.toml
.dvc/: config
data/: .gitignore  file.csv.dvc  first-file.csv.dvc  my-file.csv.dvc
