[tool.poetry]
name = "demo"
version = "0.1.0"
description = "This is my poetry and dvc demo project"
authors = ["Doreen Sacker <doreen@opinary.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
